--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-        <h1>
-            codeial / user profile
-        </h1>
+<h1>
+    codeial / user profile
+</h1>
 
+<p><%= user.name %></p>
