--- a/views/user_sign-up.ejs
+++ b/views/user_sign-up.ejs
@@ -1,10 +1,8 @@
 <h1>Sign-Up</h1>
-<section class="mainContainer"> 
     <form action="/user/create" method="post" required>
-        <input type="name" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <input type="password" placeholder="Your Password" required>
-        <input type="password" placeholder="Confirm Password" required>
+        <input type="name" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="password" name="password" placeholder="Your Password" required>
+        <input type="password" name="confirm_password" placeholder="Confirm Password" required>
         <input type="submit" value="Sign Up">
     </form>
-</section>
