--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,9 @@
         </title>
     </head>
         <body>
-            <%- include('header');-%>
+            <!-- <%- include('header');-%> -->
             <h1>This is codieal / <%= title %> </h1>
-            <%- include('footer');-%>
+            <!-- <%- include('footer');-%> -->
             
         </body>
 </html>
