--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,11 +8,12 @@
             <h1>This is codieal / <%= title %> </h1>
             <section class="feed-post">
                 <h4>Post</h4>
+                <% if(locals.user){ %>
                 <form action="/post/create" id="new-post-form" method="post">
                     <textarea name="content" cols="30" rows="3" placeholder="Type here..."></textarea>
                     <input type="submit">
                 </form>
-
+                <% } %>
                 <div id="post-list-container">
                     <ul>
                         <% for(post of post) { %> 
